[package]
name = "haru_cmaes"
version = "1.0.4"
edition = "2021"
authors = ["Mauricio Maroto maulberto3@hotmail.com"]
description = "A simple CMA-ES optimization algorithm implementation based on Hansen's purecma Python implementation."
license = "MIT OR Apache-2.0"
repository = "https://github.com/maulberto3/haru_cmaes"
# exclude = [
#     "src/simple_use.rs",
# ]

[lib]
name = "haru_cmaes"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "examples/simple_use.rs" # this make only compile what's in /src

[dependencies]
anyhow = { version = "1.0.86" }
rand = { version = "0.8.5" }
nalgebra = { version = "0.33.2" }
nalgebra-lapack = { version = "0.25.0", optional = true }
statrs = { version = "0.18.0" }

[features]
default = []
profile_memory = []
openblas   = ["nalgebra-lapack/openblas"]
netlib     = ["nalgebra-lapack/netlib"]
accelerate = ["nalgebra-lapack/accelerate"]
intel-mkl  = ["nalgebra-lapack/intel-mkl"]

[dev-dependencies]
pprof = { version = "0.14.0", features = ["flamegraph"] }
criterion = { version = "0.5.1", features = ["html_reports"] }
argmin = { version = "0.10" }
argmin-math = { version = "0.4", features = ["ndarray_latest", "nalgebra_latest"] }
cmaes = "0.2.2"

[[bench]]
name = "argmin"
harness = false

[[bench]]
name = "hansen"
harness = false

[[bench]]
name = "mine"
harness = false

[[bench]]
name = "pengowen"
harness = false

[profile.dev]
opt-level = 0
debug = 0
lto = false
codegen-units = 256
incremental = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
